--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<input id="add-rapper" type="submit" value="submit">
 </form>
 
-  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="assets/javascript/gif.js" ></script>
 	
 </body>
